[package]
name = "sei-cosmwasm-test-toolkit"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
sei-tester = { path = "../contracts/sei-tester" }
cw-multi-test = "0.14.0"
anyhow = "1"
sei-cosmwasm = "0.4.3"
cosmwasm-std = "1.0.0"
cw20-base = "0.13.4"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }


[[test]]
name = "sei_cosmwasm_integration_tests"
path = "sei_cosmwasm_integration_tests.rs"